src/objects/Article_Feedback__c.object
<CustomObject>
    <fields>
        <fullName>Article_Id__c</fullName>
        <label>Article Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Article_Link__c</fullName>
        <label>Article Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Article_Number__c</fullName>
        <label>Article Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Article_Status__c</fullName>
        <label>Article Status</label>
        <picklist>
            <picklistValues>
                <fullName>Draft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Published</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Article_Title__c</fullName>
        <label>Article Title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Article Feedback</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AFN-{0000}</displayFormat>
        <label>Article Feedback Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Article Feedbacks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>